--- a/site.html
+++ b/site.html
@@ -24,21 +24,17 @@ body, html
   background-position: center;
   background-size: cover;
 }
-
 </style>
+
 <body>
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
 
   <div class="w3-display-bottomright w3-padding-large">
-    <i><h4>Contact:</i> </br> lena@amorvacuifilms.com</h4>
+    <i>Contact:</i> </br> lena@amorvacuifilms.com
   </div>
+
   <div class="w3-display-middle">
-
-    <h4 class="w3-jumbo w3-animate-top"><b>Roving Woman Coming Soon</b></h4>
-
-    <hr class="w3-border-grey" style="margin:auto;width:40%">
-
-    <p class="w3-large w3-center"></p>
+    <h4>Roving Woman: <b>Coming Soon</b></h4>
   </div>
 
   <div class="w3-display-bottomleft w3-padding-large">
